--- a/index.html
+++ b/index.html
@@ -13,9 +13,47 @@
 </head>
 
 <body>
-    <header class="main-section">
-        <img src="img/ticket.png" alt="Barca">
-    </header>
+    <div class="wrapper">
+        <div class="content">
+            <header class="hero-section">
+                <img date-speed=".6" class="hero" src="img/hero.png" alt="Barca">
+                <div class="container">
+                    <div data-speed=".75" class="main-header">
+                        <h1 class="main-title">creative scroll</h1>
+                    </div>
+                </div>
+            </header>
+            <div class="portfolio">
+                <div class="container">
+                    <main class="gallery">
+                        <div data-speed=".9" class="gallery__left">
+                            <img class="gallery__item" src="img/1.jpg" alt="first">
+                            <img class="gallery__item" src="img/2.jpg" alt="first">
+
+                            <div class="text-block gallery__item">
+                                <h2 class="text-block__h">Creative floating scroll with amazing parallax effect</h2>
+                                <p class="text-block__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor amount scrolling.</p>
+                            </div>
+                            <img class="gallery__item" src="img/6.jpg" alt="first">
+                        </div>
+                        <div data-speed="1.1" class="gallery__right">
+                            <div class="text-block gallery__item">
+                                <h2 class="text-block__h">Creative floating scroll with amazing parallax effect</h2>
+                                <p class="text-block__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor amount scrolling.</p>
+                            </div>
+
+
+                            <img class="gallery__item" src="img/4.jpg" alt="first">
+                            <img class="gallery__item" src="img/5.jpg" alt="first">
+                            <img class="gallery__item" src="img/3.jpg" alt="first">
+                        </div>
+                    </main>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
