--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <div class="content">
             <header class="hero-section">
-                <img date-speed=".6" class="hero" src="img/hero.png" alt="Barca">
+                <img data-speed=".6" class="hero" src="img/hero.png" alt="Barca">
                 <div class="container">
                     <div data-speed=".75" class="main-header">
                         <h1 class="main-title">creative scroll</h1>
