--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
     <link rel="stylesheet" href="css/all.css">
     <script src="js/main.js" defer></script>
-    <title>Document</title>
+    <title>Barca</title>
 </head>
 
 <body>
     <div class="wrapper">
         <div class="content">
             <header class="hero-section">
-                <img data-speed=".6" class="hero" src="img/hero.png" alt="Barca">
+                <img data-speed=".6" class="hero" src="img/main.png" alt="Barca">
                 <div class="container">
                     <div data-speed=".75" class="main-header">
-                        <h1 class="main-title">creative scroll</h1>
+                        <h1 class="main-title">barcelona femeni</h1>
                     </div>
                 </div>
             </header>
@@ -27,27 +27,26 @@
                 <div class="container">
                     <main class="gallery">
                         <div data-speed=".9" class="gallery__left">
-                            <img class="gallery__item" src="img/1.jpg" alt="first">
-                            <img class="gallery__item" src="img/2.jpg" alt="first">
-
+                            <img class="gallery__item" src="img/score.png" alt="first">
+                            <img class="gallery__item" src="img/aitana.png" alt="first">
                             <div class="text-block gallery__item">
-                                <h2 class="text-block__h">Creative floating scroll with amazing parallax effect</h2>
-                                <p class="text-block__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor amount scrolling.</p>
+                                <h2 class="text-block__h">Barca Femeni beat Lyon</h2>
+                                <p class="text-block__p">Second-half goals from Aitana Bonmatí and Alexia Putellas
+                                    earned Barcelona a 2-0 win over Lyon in the Women's Champions League final on
+                                    Saturday, their second straight victory in the competition.</p>
                             </div>
-                            <img class="gallery__item" src="img/6.jpg" alt="first">
+                            <img class="gallery__item" src="img/lucy.png" alt="first">
                         </div>
                         <div data-speed="1.1" class="gallery__right">
                             <div class="text-block gallery__item">
-                                <h2 class="text-block__h">Creative floating scroll with amazing parallax effect</h2>
-                                <p class="text-block__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor amount scrolling.</p>
+                                <h2 class="text-block__h">Barcelona are champions of Europe</h2>
+                                <p class="text-block__p">Barcelona defended their Women’s Champions League title and
+                                    completed a sensational quadruple with victory over record eight-time winners Lyon
+                                    in a pulsating final in Bilbao.</p>
                             </div>
-
-
-                            <img class="gallery__item" src="img/4.jpg" alt="first">
-                            <img class="gallery__item" src="img/5.jpg" alt="first">
-                            <img class="gallery__item" src="img/3.jpg" alt="first">
+                            <img class="gallery__item" src="img/patri.png" alt="first">
+                            <img class="gallery__item" src="img/alexia.png" alt="first">
+                            <img class="gallery__item" src="img/mapi.png" alt="first">
                         </div>
                     </main>
                 </div>
